--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <section id="about">
         <h2>About Us</h2>
-        <p>Welcome to our game studio! We create amazing games that entertain and inspire.</p>
+        <p>Comming soon...</p>
     </section>
     
     <section id="games">
