--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <div class="game-info">
             <h3>Tank Blitzkrieg (Beta)</h3>
             <!-- Buttons for Game 1 -->
-            <button class="game-download" data-game="game1" data-platform="windows">Download for Windows</button>
-            <button class="game-download" data-game="game1" data-platform="linux">Download for Linux</button>
+            <button class="game-download" data-file="Tank-Blitzkrieg-(Beta)-0.78.1.7z">Download for Windows</button>
+            <button class="game-download" data-file="Tank-Blitzkrieg-(Beta)-0.78.1-Linux.7z">Download for Linux</button>
             <button class="game-download" data-file="Tank-Blitzkrieg-(Beta)-0.78.1.sfx.exe">Download SFX</button>
             <button class="game-website" data-website="game1_website_link">Visit Website</button>
             <br>
@@ -61,8 +61,8 @@
         <div class="game-info">
             <h3>4D magic block</h3>
             <!-- Buttons for Game 2 -->
-            <button class="game-download" data-game="game2" data-platform="windows">Download for Windows</button>
-            <button class="game-download" data-game="game2" data-platform="linux">Download for Linux</button>
+            <button class="game-download" data-file="Game/Games2/4D_magic_block.zip">Download for Windows</button>
+            <button class="game-download" data-file="Game/Games2/4D_magic_block.tar.gz">Download for Linux</button>
             <button class="game-download" data-file="Game/Games2/4D_magic_block_SFX.exe">Download SFX</button>
             <button class="game-website" data-website="game2_website_link">Visit Website</button>
             <br>
