--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#games">Games</a></li>
                 <li><a href="#news">News</a></li>
-                <li><a href="mailto:youremail@example.com" target="_blank">Contact</a></li>
+                <li><a href="mailto:anders.studios@gmail.com" target="_blank">Contact</a></li>
             </ul>
         </nav>
         <button id="modeToggle">Toggle Dark Mode</button>
