--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#games">Games</a></li>
                 <li><a href="#news">News</a></li>
+                <li><a href="#social-media">Social Media</a></li>
+                <li><a href="#events">Events</a></li>
                 <li><a href="mailto:anders.studios@gmail.com" target="_blank">Contact</a></li>
             </ul>
         </nav>
@@ -83,9 +85,8 @@
     <section id="social-media">
         <h2>Follow Us</h2>
         <div class="social-links">
-            <a href="https://twitter.com/your_game_studio" target="_blank">Twitter</a>
-            <a href="https://www.facebook.com/your_game_studio" target="_blank">Facebook</a>
-            <a href="https://www.instagram.com/your_game_studio" target="_blank">Instagram</a>
+            <a href="https://x.com/anders_studios" target="_blank">Twitter</a>
+            <a href="https://www.instagram.com/anders_studios_official/" target="_blank">Instagram</a>
         </div>
     </section>
 
