--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anders Studios</title>
     <link rel="stylesheet" href="styles.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="light-mode">
     <header>
@@ -81,12 +81,19 @@
         <!-- Add more news items as needed -->
     </section>
 
+    <br>
+
     <!-- Social Media Integration Section -->
     <section id="social-media">
         <h2>Follow Us</h2>
-        <div class="social-links">
-            <a href="https://x.com/anders_studios" target="_blank">Twitter</a>
-            <a href="https://www.instagram.com/anders_studios_official/" target="_blank">Instagram</a>
+        <div class="social-media">
+            <a href="https://x.com/anders_studios" target="_blank" class="social-link xcom"> <i class="fab fa-xcom"></i>X.com</a>
+            <a href="https://www.instagram.com/anders_studios_official/" target="_blank" class="social-link instagram">
+                <i class="fab fa-instagram"></i> Instagram
+            </a>
+            <a href="https://www.tiktok.com/@anders_studios" target="_blank" class="social-link tiktok">
+                <i class="fab fa-tiktok"></i> TikTok
+            </a>
         </div>
     </section>
 
