--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="#news">News</a></li>
                 <li><a href="#social-media">Social Media</a></li>
                 <li><a href="#events">Events</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="mailto:anders.studios@gmail.com" target="_blank">Contact</a></li>
             </ul>
         </nav>
