--- a/gallery.html
+++ b/gallery.html
@@ -100,21 +100,21 @@
                 <div class="gallery-item">
                     <img src="gallery/L3.svg" alt="L3/33">
                     <div class="overlay">
-                        <span class="image-label">L3/33</span>
+                        <span class="image-label">L3/33 C</span>
                     </div>
                     <br>
                 </div>
                 <div class="gallery-item">
                     <img src="gallery/PanzerIV.svg" alt="Panzer IV">
                     <div class="overlay">
-                        <span class="image-label">Panzer IV</span>
+                        <span class="image-label">Panzer IV G</span>
                     </div>
                     <br>
                 </div>
                 <div class="gallery-item">
                     <img src="gallery/STRV103.svg" alt="STRV 103">
                     <div class="overlay">
-                        <span class="image-label">STRV 103</span>
+                        <span class="image-label">STRV 103-D</span>
                     </div>
                     <br>
                 </div>
@@ -128,7 +128,7 @@
                 <div class="gallery-item">
                     <img src="gallery/Tiger1.svg" alt="Tiger">
                     <div class="overlay">
-                        <span class="image-label">Tiger</span>
+                        <span class="image-label">Tiger I E</span>
                     </div>
                 </div>
         </section>
