--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <!-- Button for Game 1 -->
             <button class="game-download" data-itchio="https://anders-studio.itch.io/tank-blitzkrieg">Download The Game</button>
             <button class="game-website" data-website="game1_website_link">Visit Website</button>
+            <a href="Games/Game1/Tank-Blitzkrieg-(Beta)-DEMO.html" target="_blank" class="game-button">Demo Version</a>
             <br>
             <img src="game1.jpg" alt="Game 1">
             <p>This is a simple 2 player game that you play with your friend on the same computer.</p>
