--- a/gallery.html
+++ b/gallery.html
@@ -26,6 +26,8 @@
     <main class="gallery">
         <section class="gallery-section">
             <h2>Tanks</h2>
+            <br>
+            <br>
             <div class="container">
                 <div class="gallery-item">
                     <img src="gallery/Bulldog.svg" alt="M41 Walker Bulldog">
@@ -135,6 +137,8 @@
 
         <section class="gallery-section">
             <h2>Shells</h2>
+            <br>
+            <br>
             <div class="container">
                 <div class="gallery-item">
                     <img src="gallery/Oldshell.svg" alt="Your Shell">
@@ -167,7 +171,7 @@
                 <div class="gallery-item">
                     <img src="gallery/50cal.svg" alt="Your Shell">
                     <div class="overlay">
-                        <span class="image-label">.50Cal shell for M2A2</span>
+                        <span class="image-label">.50Cal Shell For M2A2</span>
                     </div>
                 </div>
                 <br>
@@ -176,7 +180,41 @@
         </section>
 
         <section class="gallery-section">
-            <h2>Special Stuff</h2>
+            <h2>Stones</h2>
+            <br>
+            <br>
+            <div class="container">
+                <div class="gallery-item">
+                    <img src="gallery/rock.svg" alt="Your Shell">
+                    <div class="overlay">
+                        <span class="image-label">The Classic Stone Model</span>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="container">
+                <div class="gallery-item">
+                    <img src="gallery/Rock2.svg" alt="Your Shell">
+                    <div class="overlay">
+                        <span class="image-label">Upgraded Version Of Classic Stone</span>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="container">
+                <div class="gallery-item">
+                    <img src="gallery/Mrock.svg" alt="Your Shell">
+                    <div class="overlay">
+                        <span class="image-label">Mossy Classic Rock Model</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="gallery-section">
+            <h2>Special Items</h2>
+            <br>
+            <br>
             <div class="container">
                 <div class="gallery-item">
                     <img src="gallery/fac68d14d9958f03d9561e57712af0b2.svg" alt="Your Special Stuff">
