--- a/gallery.html
+++ b/gallery.html
@@ -222,6 +222,14 @@
                         <span class="image-label">A Special Award For Killing P1000 Ratte With the M2A2</span>
                     </div>
                 </div>
+                <br>
+                <div class="gallery-item">
+                    <img src="gallery/discop-removebg-preview.png" alt="Your Special Stuff">
+                    <div class="overlay">
+                        <span class="image-label">A Removed Code Tank That Existed In Early Stages Of The Game <i>#DiscoPanzer</i></span>
+                        <p>It May Never See The Lights In The Game Again</p>
+                    </div>
+                </div>
                 <!-- Add more special stuff images and labels here -->
             </div>
         </section>
