--- a/index.html
+++ b/index.html
@@ -75,11 +75,20 @@
     </section>
     
     <section id="news">
-        <h2>News</h2>
+        <h2>Game News</h2>
         <div class="news-item">
-            <h3>Latest News Title</h3>
-            <p>Description of the latest news or updates.</p>
+            <h3>Latest Game News</h3>
+            <p>Not ready yet...</p>
         </div>
+        <br>
+        <br>
+        <br>
+        <h2>Site News</h2>
+        <div class="news-item">
+            <h3>Gallery Update</h3>
+            <p>Added a new section in <a href="gallery.html">Gallery</a> for the games stone models.</p>
+        </div>
+    
         <!-- Add more news items as needed -->
     </section>
 
@@ -95,6 +104,12 @@
             </a>
             <a href="https://www.tiktok.com/@anders_studios" target="_blank" class="social-link tiktok">
                 <i class="fab fa-tiktok"></i> TikTok
+            </a>
+            <a href="https://patreon.com/anders_studios?utm_medium=unknown&utm_source=join_link&utm_campaign=creatorshare_creator&utm_content=copyLink" target="_blank" class="social-link patreon">
+                <i class="fab fa-patreon"></i> Patreon
+            </a>
+            <a href="https://www.youtube.com/channel/UCYub9PCRsEU30Ki8CiiA-xg" target="_blank" class="social-link youtube">
+                <i class="fab fa-youtube"></i> Youtube
             </a>
         </div>
     </section>
