--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Anders Studios</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="icon" type="image/png" href="Games/Game1/Tank-Blitzkrieg-(Beta)-0.78.1/Tank-blitzkrieg/resources/app/icon.png">
+    <link rel="icon" type="image/png" href="icon.png">
 </head>
 <body class="light-mode">
     <header>
