--- a/gallery.html
+++ b/gallery.html
@@ -226,7 +226,7 @@
                 <div class="gallery-item">
                     <img src="gallery/discop-removebg-preview.png" alt="Your Special Stuff">
                     <div class="overlay">
-                        <span class="image-label">A Removed Code Tank That Existed In Early Stages Of The Game <i>#DiscoPanzer</i></span>
+                        <span class="image-label">A Removed Code Tank That Existed In Early Stages Of The Game</span>
                         <p>It May Never See The Lights In The Game Again</p>
                     </div>
                 </div>
